Fixing scroll/overflow issue

--- a/weather/css/weather.css
+++ b/weather/css/weather.css
@@ -197,6 +197,7 @@ main .divider {
 	top: 0;
 	width: auto;
 	height: auto;
+	max-height: 100vh;
 	max-width: 100%;
 	margin: 0 auto;
 	background: transparent;
